# rust-tests

./: Cargo.toml  Dockerfile  docker-compose.yml  websocket-client.py
migrations/2020-10-08-123553_init_table/: down.sql  up.sql
src/: client.rs  db.rs  db_diesel.rs  handlers.rs  main.rs  models.rs  schema.rs  websocket.rs
static/: index.html
