[package]
name = "actix-test"
version = "0.1.0"
authors = ["Syldup <syd9up@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-files = "0.3"
actix-rt = "1"
actix-web = "3"
actix-web-actors = "3"
awc = "2"
serde = { version = "~1", features = ["derive"] }
dotenv = "~0.15"
config = "~0.10"
diesel = { verson = "~1", features = ["r2d2", "postgres"] }
tokio-postgres = "~0.5"
tokio-pg-mapper = "~0.1"
tokio-pg-mapper-derive = "~0.1"
deadpool-postgres = "~0.5"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"